@@ -62,19 +62,48 @@ public class SecurityConfig {
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(List.of("http://localhost:*", "http://127.0.0.1:*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(
-                Arrays.asList("Authorization", "Content-Type", "X-Requested-With", "Accept", "Origin"));
-        configuration.setExposedHeaders(List.of("Authorization"));
-        configuration.setAllowCredentials(true);
-        configuration.setMaxAge(3600L);
+    CorsConfiguration configuration = new CorsConfiguration();
+    configuration.setAllowedOriginPatterns(List.of("http://localhost:*",
+    "http://127.0.0.1:*"));
+    configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE",
+    "OPTIONS", "PATCH"));
+    configuration.setAllowedHeaders(
+    Arrays.asList("Authorization", "Content-Type", "X-Requested-With", "Accept",
+    "Origin"));
+    configuration.setExposedHeaders(List.of("Authorization"));
+    configuration.setAllowCredentials(true);
+    configuration.setMaxAge(3600L);
 
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
-        return source;
+    UrlBasedCorsConfigurationSource source = new
+    UrlBasedCorsConfigurationSource();
+    source.registerCorsConfiguration("/**", configuration);
+    return source;
     }
+
+    // @Bean
+    // public CorsConfigurationSource corsConfigurationSource() {
+    //     CorsConfiguration configuration = new CorsConfiguration();
+
+    //     configuration.setAllowedOriginPatterns(List.of(
+    //             "http://localhost:*",
+    //             "http://127.0.0.1:*",
+    //             "https://*.vercel.app"));
+
+    //     configuration.setAllowedMethods(Arrays.asList(
+    //             "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+
+    //     configuration.setAllowedHeaders(Arrays.asList(
+    //             "Authorization", "Content-Type", "X-Requested-With", "Accept", "Origin"));
+
+    //     configuration.setExposedHeaders(List.of("Authorization"));
+
+    //     configuration.setAllowCredentials(true);
+    //     configuration.setMaxAge(3600L);
+
+    //     UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+    //     source.registerCorsConfiguration("/**", configuration);
+    //     return source;
+    // }
 
     @Bean
     public DaoAuthenticationProvider authenticationProvider() {
